#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ktateish-aoj], [0.0.1], [kt@wheel.jp])
AC_CONFIG_SRCDIR([autogen.sh])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign no-exeext])
AM_EXTRA_RECURSIVE_TARGETS([aojcheck aojclean])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 tools/Makefile
                 itp1/Makefile
                 itp1/c/Makefile
                 itp1/go/Makefile
                 itp1/ruby/Makefile
                 alds1/Makefile
                 alds1/c/Makefile
                 alds1/cc/Makefile
                 alds1/go/Makefile
                 dsl/Makefile
                 dsl/go/Makefile
                 grl/Makefile
                 grl/go/Makefile
		 ])
AC_OUTPUT
